fix(border): add missing border to empty containers

--- a/src/popup/style.css
+++ b/src/popup/style.css
@@ -119,6 +119,10 @@ body {
 }
 
 .emptyContainer {
+    /* border-color matches TabNav lib */
+    border-right: 1px solid rgb(225, 228, 232);
+    border-bottom: 1px solid rgb(225, 228, 232);
+    border-left: 1px solid rgb(225, 228, 232);
     background: white;
     display: flex;
 }
